# pl0-haskell

./: .pre-commit-config.yaml  README.md  Session.vim  TODO.md  assembly.md  pl0.cabal
.github/workflows/: generate_documentation.yml
app/: Main.hs
docs/: PL0-Interpreter.html  PL0-Lexer.html  PL0-Parser.html  PL0-Syntax.html  PL0-Token.html  PL0.html  doc-index.html  doc-index.json  index.html  pl0.haddock
docs/html/pl0/: PL0-Parser.html  PL0-Syntax.html  PL0-Token.html
docs/src/: PL0.Compiler.Intermediate.html  PL0.Compiler.ThreeAddress.html  PL0.Compiler.html  PL0.Interpreter.html  PL0.Lexer.html  PL0.Parser.html  PL0.Syntax.html  PL0.Token.html  PL0.html
scripts/: generate_docs.sh  threeaddresss_interpreter.py
src/: Compiler.hs  Interpreter.hs  Lexer.hs  PL0.hs  Parser.hs  Session.vim  Syntax.hs  Token.hs
src/Compiler/: Intermediate.hs  ThreeAddress.hs
src/PL0/: Compiler.hs  Interpreter.hs  Lexer.hs  Parser.hs  Syntax.hs  Token.hs
src/PL0/Compiler/: Intermediate.hs  ThreeAddress.hs
test/: ex3.pl0  ex4.pl0  ex5.pl0
