cabal-version:          2.2
name:                   pl0
version:                0.1.0.0
-- synopsis:
-- description:
-- license:             BSD3
-- license-file:           LICENSE
author:                 Freddy Pringle
maintainer:             freddyjepringle@gmail.com
-- copyright:
-- category:
build-type:             Simple
extra-source-files:     CHANGELOG.md

common deps
  build-depends:        base >=4.12
                        , containers
                        , mtl
                        , transformers
                        , parsec

library
  import:               deps
  exposed-modules:      Token
                        Lexer
                        Syntax
                        Parser
                        Interpreter
                        Compiler
  -- other-modules:
                        Compiler.ThreeAddress
                        Compiler.Intermediate
  -- other-extensions:
  build-depends:        base >=4.12
  hs-source-dirs:       src
  default-language:     Haskell2010

executable pl0
  import:               deps
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        pl0
  hs-source-dirs:       app
  default-language:     Haskell2010
