cabal-version:          2.2
name:                   pl0
version:                0.1.0.0
-- synopsis:
description:            pl0-haskell is a library for tokenizing, lexing, parsing, interpreting and
                        compiling (WIP) programs written in PL/0, an educational programming languages.
license:                BSD-3-Clause
license-file:           LICENSE
author:                 Frederick Pringle
maintainer:             freddyjepringle@gmail.com
-- copyright:
-- category:
build-type:             Simple
extra-doc-files:        spec.ebnf

common deps
  build-depends:        base >=4.12
                        , containers
                        , mtl
                        , transformers
                        , parsec

library
  import:               deps
  exposed-modules:      PL0
                        PL0.Token
                        PL0.Lexer
                        PL0.Syntax
                        PL0.Parser
                        PL0.Interpreter
                        PL0.Compiler
  -- other-modules:
                        PL0.Compiler.ThreeAddress
                        PL0.Compiler.Intermediate
  -- other-extensions:
  build-depends:        base >=4.12
  hs-source-dirs:       src
  default-language:     Haskell2010

executable pl0
  import:               deps
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        pl0
  hs-source-dirs:       app
  default-language:     Haskell2010
